# twiga

./: .gitignore  pyproject.toml
app/services/: openai_service.py
app/tools/: generate_exercise.py
app/tools/utils/: ChromaDBLoader.py  openai_requests.py  question_generator_modules.py
app/utils/: database_utils.py  whatsapp_utils.py
db/: message_counts.db  message_history.db  threads.db  users.db
