[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
python-dotenv = "^1.0.1"
aiohttp = "^3.9.5"
requests = "^2.32.3"
openai = "^1.36.0"
backoff = "^2.2.1"
groq = "^0.9.0"
tiktoken = "^0.7.0"
chromadb = "^0.5.4"
sentence-transformers = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
